Cuartos details fix

--- a/tournamentManagment.html
+++ b/tournamentManagment.html
@@ -84,12 +84,12 @@
 
 				<div class="col-12 text-center">
 					<div style="display: flex">
-						<button
+						<!-- <button
 							id="cuartos_finishButton"
 							class="w-25 mt-4 btn btn-primary mx-2 w-50"
 						>
 							Cargar Jugadores
-						</button>
+						</button> -->
 						<button
 							id="closeButtonScore"
 							class="w-25 mt-4 btn btn-secondary mx-2 w-50"
@@ -398,15 +398,15 @@
           });
         }
 
-        document.getElementById("cuartos_finishButton").addEventListener("click", () => {
-          window.location.href = "quarterFinals.html";
-        });
+      //   document.getElementById("cuartos_finishButton").addEventListener("click", () => {
+      //     window.location.href = "quarterFinals.html";
+      //   });
 
-      if (document.getElementById("cuartos_finishButton") != null) {
-        document.getElementById("cuartos_finishButton").addEventListener("click", () => {
-          window.location.href = "quarterFinals.html";
-        });
-      }
+      // if (document.getElementById("cuartos_finishButton") != null) {
+      //   document.getElementById("cuartos_finishButton").addEventListener("click", () => {
+      //     window.location.href = "quarterFinals.html";
+      //   });
+      // }
 
       if (document.getElementById("apuestasScore") != null) {
       document.getElementById("apuestasScore").addEventListener("click", () => {
